# aoide-iTunes

./: CONTRIBUTING.md  Cargo.toml  Package.resolved  Package.swift  README.md  build.rs  wrapper.h
AoideClient/: API.swift  APILog.swift  Client.swift  Utils.swift
AoideITunes/: main.swift
AoideITunes/Sources/: main.swift
AoideITunesLib/: MainClass.swift
AoideITunesLib/Sources/: AIError.swift  Library.swift  MainClass.swift  Utils.swift
AoideITunesLib/Tests/: AlbumMappingTests.swift  ArtistMappingTests.swift
AoideModel/: Actor.swift  Title.swift
AoideModel/Sources/: Actor.swift  Markers.swift  Release.swift  Source.swift  Tags.swift  Title.swift  Track.swift  Utils.swift
AoideModel/audio/: Audio.swift  Channels.swift
AoideModel/media/: Source.swift
AoideModel/track/: Album.swift  Markers.swift  Track.swift
AoideModelDTO/: Actor.swift
DTOTests/: ActorDTOTests.swift
ITunesModel/: ITLibAlbumProtocol.swift  ITLibArtistProtocol.swift  ITLibMediaItemMediaKindProtocol.swift  ITLibMediaItemProtocol.swift  ITLibraryProtocol.swift
ITunesModelStubs/: ITLibAlbumStub.swift  ITLibArtistStub.swift  ITLibMediaItemLocationTypeStub.swift  ITLibMediaItemLyricsContentRatingStub.swift  ITLibMediaItemMediaKindStub.swift  ITLibMediaItemVideoInfoStub.swift  ITLibraryStub.swift
IntegrationTests/: IntegrationTests.swift
MappingTests/: ActorsMappingTests.swift  AlbumMappingTests.swift  MarkersMappingTests.swift  ReleaseMappingTests.swift  TitleMappingTests.swift
Mappings/: ActorsMapping.swift  MarkersMapping.swift  TagsMapping.swift
Mappings/Sources/: Tags.swift  (+6 more)
(+65 files in other folders)
