[package]
name = "aoide-iTunes"
version = "0.1.0"
authors = ["Ferran Pujol Camins <ferranpujolcamins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2.7"

[build-dependencies]
bindgen = "0.53.2"
